# SpyDust

./: .gitignore  README_GUI.md  gui_requirements.txt  launch_gui.sh  pyproject.toml  setup.py
SpyDust/: Grain.py  SED.py  SED_fit.py  SpyDust.py
SpyDust.egg-info/: PKG-INFO  SOURCES.txt
paper-products/AME_feature_analysis/GSA_and_surrogates/: GSA_DC.ipynb  GSA_HII.ipynb  GSA_MC.ipynb  SED_feature_emulation.ipynb  SEDfeature_emulator.ipynb  moment_expansion.ipynb  obs_catalogue_vs_MonteCarlo_samples.ipynb  parallel_analysis.py  parallel_analysis_key_params_grid.py  parallel_analysis_key_params_grid_v2.py
paper-products/AME_feature_analysis/case_study/: SED_given_size_shape.ipynb  (+1 more)
paper-products/full_stokes/: test_funcs.ipynb
tests/: benchmark_infrared.ipynb
tests/grain_env_analysis/: SED_variation_visualization.ipynb
tests/grain_size/: size_ensemble.ipynb
tests/grain_size_analysis/: CNM_SED_list.npy  CNM_feature_emulator.pkl  CNM_feature_list.npy  CNM_parameter_list.npy  DC_SED_feature_given_size_shape.ipynb  PDR_SED_list.npy  SED_feature_given_distribution.ipynb  SED_feature_given_distribution_archived.ipynb  SED_feature_given_size_shape.ipynb  SED_single_grains.ipynb  freqs.npy  grain_size.py  grain_size_dist.py  grain_size_gui.py  size_ensemble.ipynb  size_ensemble_archived.ipynb
tests/single_size_env/: GSA_DC.ipynb  GSA_HII.ipynb  GSA_MC.ipynb  SED_single_grains.ipynb  gsa_pipeline.py  mc_int.py  moment_and_emulation.ipynb  parallel_analysis_key_params.py
tests/spydust_paper/: SpDust_vs_SpyDust.ipynb  beta_comparisons.ipynb
