[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SpyDust"
version = "1.2"
description = "A code for modeling spinning dust radiation"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Zheng Zhang", email = "zheng.zhang@manchester.ac.uk"}
]
keywords = ["astrophysics", "astronomy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "mpi4py",
]

[project.urls]
Homepage = "https://github.com/zzhang0123/SpyDust"

[tool.setuptools.packages.find]
include = ["SpyDust*"]

[tool.setuptools.package-data]
SpyDust = ["Data_Files/*"]